[project]
name = "finland-energidb"
description = "Stand-alone scripts for Finland Energy data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

dependencies = [
    "httpx>=0.25.0",
    "influxdb-client>=1.36.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "sentry-sdk>=2.26.1",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Internal",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "ruff",
    "pre-commit",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = ["docs/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
